[gd_scene load_steps=5 format=3 uid="uid://bayt41i2apokn"]

[ext_resource type="Texture2D" uid="uid://cxqlldf6idhr8" path="res://resources/tower.png" id="1_ganqd"]
[ext_resource type="Script" path="res://scripts/tower.gd" id="2_2r0vk"]
[ext_resource type="Texture2D" uid="uid://cfqs30pgdlraw" path="res://resources/fire.png" id="2_psn7f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0n1oe"]
radius = 679.001

[node name="Tower" type="Sprite2D"]
texture = ExtResource("1_ganqd")
script = ExtResource("2_2r0vk")

[node name="TowerFire" type="Sprite2D" parent="."]
visible = false
position = Vector2(25, -452)
texture = ExtResource("2_psn7f")

[node name="TowerArea" type="Area2D" parent="."]
position = Vector2(-6, 378)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerArea" groups=["tower"]]
position = Vector2(0, 86)
shape = SubResource("CircleShape2D_0n1oe")
debug_color = Color(0.979464, 0, 0.3917, 0.0784314)

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.067
anchor_right = 0.501
anchor_bottom = 0.067
offset_left = -570.5
offset_top = -539.0
offset_right = 70.5
offset_bottom = -460.0
max_value = 10000.0
show_percentage = false

[connection signal="body_entered" from="TowerArea" to="." method="_on_tower_area_body_entered"]
[connection signal="body_exited" from="TowerArea" to="." method="_on_tower_area_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
